Skip to content

SPS/PPS is not send periodicaly with H264 streaming

I have got a very annoying bug in VLC 0.8.6x (I test a/b/c and d for Win32) and VLC 0.9.0-20071129: SPS/PPS seems not to be send when I do a H264 multicast streaming It almost work with 0.8.1 -> 0.8.5 : few "late pictures" but SPS/PPS is correctly send. With 0.8.6x and 0.9.0, if I start the play before the beginning of my streaming it's perfect but if I try to start the play after the beginning of the streaming => no SPS/PPS, only sound and no video

Error message is a no-end succession of: "packetizer_h264 warning: waiting for SPS/PPS"

Others users that encounter the same problem: http://forum.videolan.org/viewtopic.php?f=4&t=40454&start=0&st=0&sk=t&sd=a http://forum.videolan.org/viewtopic.php?f=14&t=40066&start=0&st=0&sk=t&sd=a

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information