remove b_header in packetizer so sps/pps are send with every keyframe, shouldn't break anything (tested on mp4/ts files, rtp stream and http/ts stream). Files play correctly and MP4Box/ffmpeg recognize them correctly. should fix #1384